# NuiTrackSDKSample

./: README.md
sample/Align/: CMakeLists.txt  nuitrack.cpp  nuitrack.h
sample/Color/: CMakeLists.txt  nuitrack.cpp  nuitrack.h
sample/Depth/: CMakeLists.txt  nuitrack.cpp  nuitrack.h
sample/Face/: CMakeLists.txt  main.cpp  nuitrack.cpp  nuitrack.h  parser.h
sample/Gesture/: CMakeLists.txt  nuitrack.cpp  nuitrack.h
sample/Hand/: CMakeLists.txt  nuitrack.cpp  nuitrack.h
sample/Skeleton/: CMakeLists.txt  FindNuiTrack.cmake  nuitrack.cpp  nuitrack.h
sample/User/: CMakeLists.txt  FindNuiTrack.cmake  main.cpp  nuitrack.cpp  nuitrack.h
